# aka_cad

./: .dockerrc  .gitignore  CMakeLists.txt  Dockerfile  README.md  app.py  docker-compose.yml  gen_db.py  gunicorn_config.py  nginx.conf  setup.py  test.py  test_RL_learning.py  test_random.py
aka_cad/: Climate_Change_Impact_on_Global_Agriculture_Draft.docx
app/static/css/: homePage.css
app/static/js/: Menu.js  PaintBox.js  Panel.js  Shapelib.js  editor.js  exportHandler.js  loginPage.js  method-draw.js  modals.js  nest.js  svgcanvas.js
app/static/js/lib/: jquery.jgraduate.js
app/templates/: index.html
data/: 1.json  2.json  3.json
data_processing_src/: crop_objs.py
scripts/: main.py  main_train.py  main_train_v1.py  test.py
src/: RL_learning.py  SVG.py  __init__.py  main.cpp  material.py  nester.py  object.py  place_obj2box.py  random_learning.py
src/db_manager/: __init__.py  data.sql  database.erd  database.sql  db_manager.py  payment_manager.py  premium_manager.py  svg_manager.py  user_manager.py
test/: test_centroid.py  test_login.py
utils/: __init__.py  common.py  convert_img.py  draw_poly.py  export.py  polygon.py  request.py  transform.py
